# clara_2026

./: .gitignore  .gitinore  .~lock.MCEE_Architecture_Globale_v3.docx#  .~lock.MCEE_MCTGraph_Documentation.docx#  .~lock.MCEE_MCTGraph_Documentation_v2.docx#  MCEE_Architecture_Globale_v3.docx  MCEE_MCTGraph_Documentation.docx  MCEE_MCTGraph_Documentation_v2.docx  MCEE_dev_summary.md  MCEE_dev_summary_v2.md  MCEE_v2_complet.tex  README.md  main.tex
doc/: MCEE_dev_summary_v2.tex  MCEE_migration_guide.md  MCEE_resume_technique.tex
emotion/: CMakeLists.txt  Neo4j Cypher_MLT.txt  main.cpp  prediction_emotions.cpp  test_emotions.py
emotion_final/: CMakeLists.txt  model.json
files/: ConscienceConfig.hpp  ConscienceEngine.cpp  ConscienceEngine.hpp  test_conscience.cpp
mcee/: .gitignore  CMakeLists.txt  Configuration.txt  MCEEConfig.cpp  MCEEConfig.h  MCEEContextualizer.cpp  MCEEContextualizer.h  MCEECore.cpp  MCEECore.h  MCEEGradients.cpp  MCEEGradients.h  MCEERabbitMQ.cpp  MCEERabbitMQ.h  MCEERabbitMQ_stub.cpp  MCEETypes.cpp  MCEETypes.h  README.md  build.sh  build_manual.sh  conanfile.txt  main.cpp  mcee_config.txt
mcee_final/: CMakeLists.txt  README.md
mcee_final/config/: phase_config.json
mcee_final/include/: ADDOConfig.hpp  ADDOEngine.hpp  Amyghaleon.hpp  ConscienceConfig.hpp  ConscienceEngine.hpp  DecisionConfig.hpp  DecisionEngine.hpp  EmotionUpdater.hpp  HybridSearchEngine.hpp  LLMClient.hpp  MCEEEngine.hpp  MCT.hpp  MCTGraph.hpp  MDDOEngine.hpp  MLT.hpp  MemoryManager.hpp  Neo4jClient.hpp  PatternMatcher.hpp  PhaseConfig.hpp  SpeechInput.hpp
mcee_final/scripts/: test_mctgraph.py
mcee_final/services/: llm_service.py
mcee_final/src/: ADDOEngine.cpp  Amyghaleon.cpp  ConscienceEngine.cpp  DecisionEngine.cpp  EmotionUpdater.cpp  HybridSearchEngine.cpp  LLMClient.cpp  MCEEEngine.cpp  MCT.cpp  MCTGraph.cpp  MDDOEngine.cpp  MLT.cpp  MemoryManager.cpp  Neo4jClient.cpp  PatternMatcher.cpp  SpeechInput.cpp  main.cpp
mcee_v2.0/mcee/: CMakeLists.txt  README.md
mcee_v2.0/mcee/include/: Amyghaleon.hpp  MCEEEngine.hpp  Types.hpp
mcee_v2.0/mcee/src/: MCEEEngine.cpp  main.cpp
mcee_v2.1/mcee/: CMakeLists.txt  README.md
mcee_v2.1/mcee/include/: EmotionUpdater.hpp  MCEEEngine.hpp  PhaseDetector.hpp  SpeechInput.hpp
mcee_v2.1/mcee/src/: EmotionUpdater.cpp  MemoryManager.cpp  PhaseDetector.cpp  main.cpp
neo4j/: Dockerfile  STRUCTURE_NEO4J.md  STRUCTURE_NEO4J.tex  app.py  docker-compose.yml  hybrid_search.py  index_embeddings.py  neo4j_service.py  records.json  requirements.txt  test_hybrid_search.py  test_neo4j.py  test_neo4j_full.py
neo4j/migrations/: 001_add_vector_index.cypher
rabbitmq/: docker-compose.yml
reves/: CMakeLists.txt  DreamConfig.hpp  DreamEngine.cpp  DreamEngine.hpp  DreamIntegration.hpp  DreamNeo4jBridge.hpp  DreamRabbitMQConsumer.hpp  DreamState.hpp  README.md  main.cpp  simple_example.cpp
reves/examples/: main.cpp
reves/tests/: DreamEngineTest.cpp
test/: rapport.txt  test_behavioral_validation.py  test_emotion_system_complete.py  test_emotions.py  test_latency.py  test_mcee_advanced.py  test_mcee_module.py  test_mct_realiste.py  test_mct_realiste_complet.py  test_mct_storage.py  test_modules_complet.py  test_neo4j_direct.py  test_neo4j_verify.py
